# pircar

./: CMakeLists.txt  README.md  arm-dev-env  checkandrun.sh  download.sh  env-install.sh  lib-dev-install.sh  runall.sh  startall.sh  stopall.sh  upload.sh  watchdog.sh
browser-pirc/: CMakeLists.txt
debian/: CMakeLists.txt
indi-pirc/: CMakeLists.txt  main.c  rpc-utils.c  rpc-utils.h
indicator-test/: CMakeLists.txt  main.c
libconfig-1.4.9/: Makefile  config.status  libtool
libconfig-1.4.9/doc/: Makefile
libconfig-1.4.9/examples/: Makefile
libconfig-1.4.9/examples/c/: Makefile
libconfig-1.4.9/examples/c++/: Makefile
libconfig-1.4.9/examples/c/.deps/: example1.Po  example2.Po  example3.Po
libconfig-1.4.9/lib/: Makefile
libconfig-1.4.9/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo
libconfig-1.4.9/tests/: Makefile
libconfig-1.4.9/tests/.deps/: libconfig_tests-tests.Po
libconfig-1.4.9/tinytest/: Makefile
libconfig-1.4.9/tinytest/.deps/: tinytest.Po
libstreamripper/: CMakeLists.txt  Makefile  config.status  libtool
libstreamripper/autom4te.cache/: requests
libstreamripper/src/: Makefile  libstreamripper.pc
mpd/doc/: doxygen.conf
radio-pirc/: CMakeLists.txt
radio-pirc/files/: mpd.conf  ympd.conf
radio-pirc/htdocs/: images  index.html  menu.html
radio-pirc/htdocs/css/: carradio.css  carradio.min.css
radio-pirc/htdocs/js/: player.js
radio-pirc/src/: config.h.in  http_server.c  mongoose.c  mpd_client.c  mpd_client.h  mpd_utils.c  mpd_utils.h  radio.c  radio.h  sql.c  sqlitedb.c  sqlitedb.h  streamripper.c  ympd.c
radio-pirc/streams/: Music Machine 2.pls  Music Machine.pls
radio-pirc/tools/: dbradio.c
tests/db-test/: CMakeLists.txt  main.c
tests/mpd-test/: CMakeLists.txt  main.c
tests/wnck-test/: CMakeLists.txt  main.c  main1.c
tests/x11window-test/: main.c
ubuntu1404/: CMakeLists.txt  connectbroadband1.sh  mpd.conf  ympd.conf
